--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-    "name": "___plugin___lab___",
+    "name": "malta-restify",
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "malta": "^4.0.5"
-    },
-    "scripts": {
-        "build": "malta build.json",
-        "postinstall": "cd plugins/malta-restify && yarn install",
-        "bananabomb": "malta -clean && rm -rf yarn.lock node_modules plugins/malta-restify/node_modules "
+        "restify": "^8.4.0",
+        "restify-cors-middleware": "^1.1.1",
+        "restify-errors": "^8.0.1",
+        "restify-plugins": "^1.6.0"
     }
 }
