--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
         "url": "https://github.com/fedeghe/malta-restify/issues"
     },
     "dependencies": {
-        "restify": "^8.4.0",
+        "restify": "^8.5.1",
         "restify-cors-middleware": "^1.1.1",
-        "restify-errors": "^8.0.1",
-        "restify-plugins": "^1.6.0"
+        "restify-errors": "^8.0.1"
     },
     "main": "index.js"
 }
